--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 
     // utils
     implementation 'com.github.arimorty:floatingsearchview:2.1.1'
+    implementation "com.github.bumptech.glide:glide:4.9.0"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
